--- a/alertdrone/alerts/serverless.yml
+++ b/alertdrone/alerts/serverless.yml
@@ -63,6 +63,17 @@ provider:
 functions:
   hello:
     handler: handler.hello
+    events:
+      - cloudwatchEvent:
+          event:
+            source:
+              - "aws.autoscaling"
+            detail-type:
+              - "EC2 Instance Launch Successful"
+            detail:
+              AutoScalingGroupName:
+                - "alertdrone-asg"
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
